# hackaTUM23

./: .vsls.json  README.md  docker-compose.yaml
.github/workflows/: docker-image.yml
backend/: Cargo.toml  Dockerfile
backend/data/: README.md  postcode.json
backend/src/: data.rs  main.rs  map.rs  postcode.rs
frontend/: .eslintrc.cjs  Caddyfile  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/assets/: README.md  wireframe.css
frontend/src/components/: Map.vue  PLZSearch.vue  PostcodeInputPage.vue  Search.vue  ServiceProviderMap.vue  SingleMap.vue
frontend/src/models/: autocomplete.ts  results.ts  shared.ts
