[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
chrono = "0.4.24"
clap = { version = "4.2.7", features = ["derive"] }
dotenv = "0.15.0"
indicatif = "0.17.3"
num-traits = "0.2.17"
rstar = "0.11.0"
serde = { version = "1.0.163", features = ["derive"]}
serde_json = "1.0.108"
simsearch = "0.2.4"
